--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,22 +16,26 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 'lts/*'  
+        node-version: 'lts/*'
+
+    - name: Install Heroku CLI
+      run: |
+        Invoke-WebRequest -Uri https://cli-assets.heroku.com/heroku-x64.exe -OutFile $env:TEMP\heroku.exe
+        $env:Path += ";$env:TEMP"
+      shell: pwsh
 
     - name: Log in to Heroku Container Registry
       run: heroku container:login
 
     - name: Build and push Docker image
       run: |
-        docker build -t registry.heroku.com/sbpokemon-api/web .
-        docker push registry.heroku.com/sbpokemon-api/web
+        docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
+        docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
     - name: Set Heroku Email, APP Name and API Key
-      run: heroku login -i
-      env:
-        HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APp_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      run: |
+        heroku login -i
+        heroku apps:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }}
 
     - name: Release to Heroku
-      run: heroku container:release web -a sbpokemon-api
+      run: heroku container:release web -a ${{ secrets.HEROKU_APP_NAME }}
