--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,17 @@ jobs:
       shell: bash
 
     - name: Log in to Heroku Container Registry
-      run: heroku container:login
+      run: heroku container:login -i
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
     - name: Build and push Docker image
       run: |
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
-    - name: Set Heroku Email, APP Name and API Key
+    - name: Set Heroku Email, APP Name, and API Key
       run: |
-        heroku login -i
         heroku apps:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }}
 
     - name: Release to Heroku
