Fix heroku login contain

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Build and push Docker image
       run: |
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
-        docker login --username=_ --password="${HEROKU_API_KEY}" registry.heroku.com
+        echo "${HEROKU_API_KEY}" | docker login --username=_ --password-stdin registry.heroku.com
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
     - name: Set Heroku Email, APP Name, and API Key
