--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,14 +26,14 @@ jobs:
 
     - name: Log in to Heroku
       run: |
-        echo "machine api.heroku.com login _ password=${HEROKU_API_KEY}" > ~/.netrc
+        heroku container:login
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
     - name: Build and push Docker image
       run: |
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
-        echo "${HEROKU_API_KEY}" | docker login --username=_ --password-stdin registry.heroku.com
+        docker login --username=_ --password=${HEROKU_API_KEY} registry.heroku.com
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
     - name: Set Heroku Email, APP Name, and API Key
