--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,11 @@ jobs:
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
-    - name: Set Heroku Email, APP Name, and API Key
+    - name: Set Heroku Environment Variables
       run: |
-        heroku apps:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }}
+        heroku config:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }}
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
     - name: Release to Heroku
       run: heroku container:release web -a ${{ secrets.HEROKU_APP_NAME }}
