--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Set Heroku Environment Variables
       run: |
-        heroku config:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }}
+        heroku config:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }} -a ${{ secrets.HEROKU_APP_NAME }}
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
