--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,23 +20,29 @@ jobs:
 
     - name: Install Heroku CLI
       run: |
+        # Install Heroku CLI
         curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+        
+        # Add Heroku CLI to PATH
         echo 'export PATH="/usr/local/heroku/bin:$PATH"' >> $GITHUB_ENV
       shell: bash
 
     - name: Log in to Heroku Container Registry
       run: |
+        # Log in to Heroku Container Registry using the provided HEROKU_API_KEY secret
         docker login --username=_ --password=${HEROKU_API_KEY} registry.heroku.com
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
     - name: Build and push Docker image
       run: |
+        # Build a Docker image and push it to Heroku Container Registry
         docker build -t registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web .
         docker push registry.heroku.com/${{ secrets.HEROKU_APP_NAME }}/web
 
     - name: Set Heroku Environment Variables
       run: |
+        # Set Heroku environment variables using the provided secrets
         heroku config:set HEROKU_EMAIL=${{ secrets.HEROKU_EMAIL }} HEROKU_API_KEY=${{ secrets.HEROKU_API_KEY }} HEROKU_APP_NAME=${{ secrets.HEROKU_APP_NAME }} -a ${{ secrets.HEROKU_APP_NAME }}
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
